--- a/src/app/components/articulo/articulo.component.html
+++ b/src/app/components/articulo/articulo.component.html
@@ -1,14 +1,29 @@
 <ion-card>
   <ion-card-subtitle class="ion-margin">
-    <span class="text-primary">{{ index + 1 }}. </span>
-    <span class="article-source-name">{{ article.source.name }}</span>
+
+    <ion-row class="ion-align-items-center" (click)="openArticle()">
+      <ion-col class="ion-margin">
+        <span class="text-primary">{{ index + 1 }}. </span>
+        <span class="article-source-name">{{ article.source.name }}</span>
+      </ion-col>
+
+      <ion-col aling="rigth">
+        <ion-button (click)="onClick()" fill="clear">
+          <ion-icon slot="icon-only" name="ellipsis-vertical-outline"></ion-icon>
+        </ion-button>
+        
+      </ion-col>
+    </ion-row>
+
+    
+
   </ion-card-subtitle>
 
   <ion-card-title class="ion-padding-horinzontal ion-margin-bottom">
     {{ article.title}}
   </ion-card-title>
 
-  <ion-img *ngIf="article.urlToImage" [src]="article.urlToImage"></ion-img>
+  <ion-img *ngIf="article.urlToImage" [src]="article.urlToImage" (click)="openArticle()"></ion-img>
 
   <ion-card-content *ngIf="article.description">
    <p>{{article.description}}</p>
