--- a/src/app/pages/tab1/tab1.page.html
+++ b/src/app/pages/tab1/tab1.page.html
@@ -14,5 +14,13 @@
   </ion-header>
 
   <app-articulos [articles] = "articles"></app-articulos>
+
+  <ion-infinite-scroll
+    threshold="25%"
+    position="bottom" 
+    (ionInfinite)="loadData()">
+    <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Cargando...">
+    </ion-infinite-scroll-content>
+  </ion-infinite-scroll>
   
 </ion-content>
